tests/ui/blanket-impl.stderr
error[E0118]: no nominal type found for inherent implementation
 --> tests/ui/blanket-impl.rs:7:1
  |
7 | #[inherent]
  | ^^^^^^^^^^^ impl requires a nominal type
  |
  = note: either implement a trait on it or create a newtype to wrap it instead
  = note: this error originates in the attribute macro `inherent` (in Nightly builds, run with -Z macro-backtrace for more info)
